  * Removed unsupported SysVinit service management
  * SSH_PORT variable independent of SSH_OPTS
  * RSYNC protocol supported
  * Improved DRLM installation
  * Added drlm-tftpd systemd service
  * Added drlm-rsyncd systemd service
  * Addnetwork, modnetwork and addclient simplified
  * Addnetwork is done automatically when you run addclient
  * DHCP server is managed automatically
  * Improves logs management

 -- Pau Roura <pau@brainupdaters.net>  Tue, 20 Apr 2021 00:00:00 +0100

drlm (2.3.2) stable release; urgency=high
  * Fixed wget package dependency (issue #127)
  * Fixed make clean leave drlm-api binary in place (issue #130)
  * Fixed message errors during drlm version upgrade (issue #131, #132)
  * Fixed NFS_OPTS variable is not honored (issue #138)
  * RedHat/CentOS 8 support
  * Ubuntu 20.04 support

 -- Pau Roura <pau@brainupdaters.net>  Mon, 28 Dec 2020 00:00:00 +0100

drlm (2.3.1) stable release; urgency=high
  * Fixed DRLM user group permissions (issue #118).
  * Fixed copy_ssh_id function with the -u parameter (issue #119).
  * Listbackup in pretty mode without OS version / ReaR version works now (issue #120).
  * Updated the default configuration.

 -- Néfix Estrada <nefix@brainupdaters.net>  Wed, 03 Jul 2019 00:00:00 +0100

drlm (2.3.0) stable release; urgency=high
  * Golang DRLM API replacing Apache2 and CGI-BIN.
  * Listbackup command now shows size and duration of backup.
  * Improved database version control.
  * dpkg purge section added.
  * Improved disable_nfs_fs function.
  * Added "-C" on install workflow to allow configuration of the client without install dependencies.
  * Added "-I" in the import backup workflow to allow importing a backup from within the same DRLM server.
  * Added "-U" on list clients to list the clients that have no scheduled jobs.
  * Added a column on list clients that shows if a client has scheduled jobs.
  * Added "-p" on list backups workflow to mark the backups that might have failed with colors.