@@ -22,7 +22,8 @@ drlm (2.4.0) stable release; urgency=high
   * Addnetwork, modnetwork and addclient simplified
   * Addnetwork is done automatically when you run addclient
   * DHCP server is managed automatically
-  * Improves logs management
+  * Improved logs management
+  * Debian 11 Support on install client workflow.
 
  -- Pau Roura <pau@brainupdaters.net>  Tue, 20 Apr 2021 00:00:00 +0100
 
